--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,11 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_LINES_OF_CODE: "True"
+          SHOW_TOTAL_CODE_TIME: "False"
+          SHOW_SHORT_INFO: "False"
           SHOW_DAYS_OF_WEEK: "False"
           SHOW_TIMEZONE: "False"
+          SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_LOC_CHART: "False"
+          UPDATED_DATE_FORMAT: "%m/%d/%Y %H:%M:%S"
